fixes #4561 - added dijit_a11y .dijitTabChecked style to use a dashed border for active tab in high contrast mode.  Also had to add dijit_a11y .dijitTabInnerDiv to remove left solid border when in high contrast.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10753 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -982,7 +982,13 @@ body .dijitAlignClient { position: absolute; }
 .dijit_a11y .closeText:hover { 
 	border:thin solid;
 } 
+.dijit_a11y .dijitTabChecked {
+	border-style:dashed !important;
+}
 
+.dijit_a11y .dijitTabInnerDiv {
+	border-left:none !important;
+ }
 
 
 .dijitInlineEditor {
